--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,6 @@ body,
 html,
 #root,
 .App {
-  margin: 0;
-  padding: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
